--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Isaac Johnson",
   "license": "MIT",
   "dependencies": {
+    "@ronomon/mime": "^3.6.0",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
